i18n: Add missing documentation for messages
Bug: T102849
Change-Id: I7d531ef16f16a030dda02efe502ad1b48efed573

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -5,5 +5,9 @@
 			"Umherirrender"
 		]
 	},
-	"fundraiserlandingpage-desc": "{{desc|name=Fundraiser Landing Page|url=https://www.mediawiki.org/wiki/Extension:FundraiserLandingPage}}"
+	"fundraiserlandingpage-desc": "{{desc|name=Fundraiser Landing Page|url=https://www.mediawiki.org/wiki/Extension:FundraiserLandingPage}}",
+	"fundraiserlandingpage-wmch-landing-page": "{{notranslate}}Link to Wikimedia Switzerland's fundraiser landing page.",
+	"fundraiserlandingpage-wmde-landing-page": "{{notranslate}}Link to Wikimedia Germany's fundraiser landing page.",
+	"fundraiserlandingpage-wmfr-landing-page": "{{notranslate}}Link to Wikimedia France's fundraiser landing page.",
+	"fundraiserlandingpage-wmuk-landing-page": "{{notranslate}}Link to Wikimedia UK's fundraiser landing page."
 }
