Update redirects to CH chapter donate page
So the i18n hack actually came in handy. I thought we'd have to add
more logic to make the redirect country and language specific!

Bug: T196403
Change-Id: Ib05b2941d6ca38964153a6fb4d442d71429c5c96

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -4,5 +4,6 @@
 			"Kghbln"
 		]
 	},
-	"fundraiserlandingpage-desc": "Ermögliche die Nutzung von URL-Parametern als Vorlagenvariablen"
+	"fundraiserlandingpage-desc": "Ermögliche die Nutzung von URL-Parametern als Vorlagenvariablen",
+	"fundraiserlandingpage-wmch-landing-page": "https://www.wikimedia.ch/de/spenden/"
 }
