--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,7 +3,7 @@
 		"authors": []
 	},
 	"fundraiserlandingpage-desc": "Takes URL parameters and passes them to the specified template as template variables",
-	"fundraiserlandingpage-wmch-landing-page": "https://wikimediafoundation.org/wiki/WMFJA1/CH",
+	"fundraiserlandingpage-wmch-landing-page": "https://www.wikimedia.ch/donate/",
 	"fundraiserlandingpage-wmde-landing-page": "https://spenden.wikimedia.de/spenden/",
 	"fundraiserlandingpage-wmfr-landing-page": "https://dons.wikimedia.fr/dons.php",
 	"fundraiserlandingpage-wmuk-landing-page": "https://donate.wikimedia.org.uk/"
